# repo-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
inspect/: analyzer_agent_demo.py  investigator_agent_demo.py  main_agent_demo.py  read_file_agent_demo.py
src/repo_agent/: __init__.py  app.py  cli.py
src/repo_agent/agents/: analyzer_agent.py  file_summary_agent.py  investigator_agent.py  json_repair_agent.py  main_agent.py  read_file_agent.py
src/repo_agent/cache/: __init__.py  paths.py  repo_profile_store.py  report_store.py
src/repo_agent/evidence/: __init__.py  context.py  graph.py  node.py
src/repo_agent/investigation/: __init__.py  observation.py  plan.py  report.py  scratchpad.py  subreport.py  subtask.py  task.py
src/repo_agent/llm/: __init__.py  analyze.py  client.py  debug.py  schemas.py
src/repo_agent/prompts/: analyzer_agent.md  investigator_agent.md  main_agent.md  repo_profile_initial.md  repo_profile_update.md
src/repo_agent/runtime/: __init__.py  config.py  events.py  session.py  text.py
src/repo_agent/tools/: __init__.py  base.py  registry.py
src/repo_agent/tools/analyzer/: __init__.py  request_subinvestigation.py
src/repo_agent/tools/file/: __init__.py  ask_file.py  read_file.py  summarize_file.py
src/repo_agent/tools/main/: __init__.py  derive_claim.py  final_answer.py  (+1 more)
src/repo_agent/toolsets/: __init__.py  analyzer_toolset.py  investigator_toolset.py  main_agent_toolset.py
src/repo_agent_viewer/: __init__.py  app.py  store.py
src/repo_agent_viewer/templates/: index.html  investigation.html  run.html  runs.html
tests/: test_analyzer_agent.py  test_app.py  test_ask_file_tool.py  test_cli.py  test_evidence_context.py  test_evidence_graph.py  test_file_tools.py  test_investigator_agent.py  test_investigator_tools.py  test_json_repair_agent.py  test_llm_call_viewer.py  test_llm_client.py  test_main_agent.py  test_repo_profile_store.py  test_report_store.py
(+6 files in other folders)
