[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-agent"
version = "0.1.0"
description = "EvidenceGraph-driven repo analysis agent"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0,<2",
    "pydantic>=2,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
